[package]
name = "zenibou-rs"
version = "0.1.0"
edition = "2021"

[profile.dev]
codegen-units = 1
opt-level = "z"

[profile.release]
codegen-units = 1
opt-level = "z"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","memoryapi","wingdi","libloaderapi","xinput"] }

[[bin]]
name = "zenibou-rs"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.53.1"
